--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ interface Props {
 <!doctype html>
 <html
   lang="en"
-  class="bg-gray-100 dark:bg-zinc-950"
+  class="bg-gray-100 dark:bg-black"
   transition:name="root"
   transition:animate="fade"
 >
