--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -6,15 +6,15 @@ import { SEO } from "astro-seo";
 // src/layouts/BlogPostLayout.astro
 
 interface PostData {
-  title: string;
-  description: string;
-  date: string;
-  formattedDate: string;
-  readingTime: number;
-  tags: string[];
-  slug: string;
-  image: string;
-  siteUrl: string;
+	title: string;
+	description: string;
+	date: string;
+	formattedDate: string;
+	readingTime: number;
+	tags: string[];
+	slug: string;
+	image: string;
+	siteUrl: string;
 }
 
 const { postData } = Astro.props;
@@ -60,7 +60,7 @@ import XShare from "../components/XShare.astro";
     />
   </Fragment>
   <div class="min-h-screen p-4 px-1 xl:p-8 transition-all">
-    <div class="max-w-3xl mx-auto">
+    <div class="max-w-[50rem] mx-auto">
       <!-- Header with Back Link -->
       <!-- <nav class="mb-12">
       <a 
@@ -73,7 +73,7 @@ import XShare from "../components/XShare.astro";
 
       <!-- Article -->
       <article
-        class="bg-white dark:bg-black rounded-3xl p-6 md:p-12 transition-all shadow-sm border border-gray-100 dark:border-zinc-900"
+        class="bg-white dark:bg-zinc-950/90 rounded-3xl p-6 md:p-12 transition-all shadow-sm border border-gray-100 dark:border-zinc-900"
       >
         <div
           class="sticky top-4 float-right cursor-pointer z-50 gap-5 flex sm:flex-row flex-col bg-white/10 dark:bg-black/5 backdrop-blur-lg sm:px-4 sm:py-1 px-2 py-2 rounded-3xl"
