--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ interface Props {
         data-astro-prefetch
         class="fixed z-50 left-4 top-4 xl:left-8 xl:top-8 scale-75 sm:scale-100 transition-all antialiased hover:scale-[1.02]"
         transition:name="logo"
-        transition:animate="slide"
+        transition:animate="none"
       >
         <svg
           width="60"
@@ -73,7 +73,7 @@ interface Props {
           <header
             class="bg-white/30 dark:bg-white/5 backdrop-blur-md rounded-full shadow-md border border-white/20 dark:border-white/5 transition-all duration-300 hover:bg-white/70 dark:hover:bg-white/10 dark:text-neutral-300"
             transition:name="navigation"
-            transition:animate="slide"
+            transition:animate="none"
           >
             <!-- Navigation - vertical on desktop, horizontal on mobile -->
             <nav
