--- a/src/pages/writing/[...slug].astro
+++ b/src/pages/writing/[...slug].astro
@@ -17,6 +17,6 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<BlogPostLayout postData={entry.data}>
+<BlogPostLayout postData={{...entry.data, slug: entry.slug}}>
   <Content />
 </BlogPostLayout>
