--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -58,7 +58,7 @@ const ogImage = postData.coverImage
       }}
     />
   </Fragment>
-  <div class="min-h-screen p-4 px-1 xl:p-8 transition-all">
+  <div class="min-h-screen p-2 px-0.5 sm:p-4 sm:px-1 xl:p-8 transition-all">
     <div class="max-w-[50rem] mx-auto">
       <!-- Header with Back Link -->
       <!-- <nav class="mb-12">
@@ -72,7 +72,7 @@ const ogImage = postData.coverImage
 
       <!-- Article -->
       <article
-        class="bg-white dark:bg-zinc-950/90 rounded-3xl p-6 md:p-12 transition-all shadow-sm border border-gray-100 dark:border-zinc-900"
+        class="bg-white dark:bg-zinc-950 rounded-3xl p-3 sm:p-6 md:p-12 transition-all shadow-sm border border-gray-100 dark:border-zinc-900"
       >
         <div
           class="sticky top-4 float-right cursor-pointer z-50 gap-5 flex sm:flex-row flex-col bg-white/10 dark:bg-black/5 backdrop-blur-lg sm:px-4 sm:py-1 px-2 py-2 rounded-3xl"
@@ -111,6 +111,7 @@ const ogImage = postData.coverImage
           </div>
           <h1
             class="text-4xl font-bold text-gray-900 dark:text-neutral-300 mb-4"
+            transition:name={`title-${postData.slug}`}
           >
             {postData.title}
           </h1>
