--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -80,6 +80,22 @@ import Layout from "../layouts/Layout.astro";
             <p class="mt-2 font-medium">contact@robertjkirk.com</p>
           </div>
         </a>
+        <a target="_blank" href="https://x.com/_robertkirk_">
+          <div
+            class={`rounded-2xl p-4 px-6 text-neutral-400 hover:bg-neutral-400/10 transition-all border border-neutral-400 w-fit`}
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+            >
+              <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+            </svg>
+            <p class="mt-2 font-medium">@_robertkirk_</p>
+          </div>
+        </a>
         <!-- <a  href="mailto:hi@robertjkirk.com">
         <div class={`rounded-2xl p-4 px-6  text-gray-500 hover:bg-gray-500/20 transition-all border border-gray-500 w-fit`}>
             
